force-app/main/default/objects/Service_Contract_Lines__c/Service_Contract_Lines__c.object-meta.xml
<CustomObject>
    <description>A list of Service Contract products to be used to generate entitlements</description>
    <label>Service Contract Line</label>
    <nameField>
        <label>Line Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>