force-app/main/default/objects/Service_Contract_Lines__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Line End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>