force-app/main/default/objects/Service_Contract_Lines__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <description>Integration ID</description>
    <externalId>true</externalId>
    <label>Integration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>