force-app/main/default/objects/Service_Contract_Lines__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <label>Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>