force-app/main/default/objects/Service_Contract_Lines__c/fields/Plan_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Product_Number__c</fullName>
    <label>Plan Product Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>