force-app/main/default/objects/Service_Contract_Lines__c/fields/Product_Name_Nominal__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Nominal__c</fullName>
    <description>The product name as we get it from the Nominal ledger</description>
    <inlineHelpText>This is the unchanged name that we pull from SME/Dimensions</inlineHelpText>
    <label>Product Name - Nominal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>