force-app/main/default/objects/Service_Contract_Lines__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>Nominal Product Number</description>
    <label>Product Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>