force-app/main/default/objects/Service_Contract_Lines__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Line Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>