force-app/main/default/objects/Service_Contract_Lines__c/fields/Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>Stock_Code__c</fullName>
    <description>Stock Code for line item</description>
    <label>Stock Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>