force-app/main/default/objects/Service_Contract_Lines__c/fields/Stock_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Name__c</fullName>
    <description>Stock Name</description>
    <label>Stock Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>