force-app/main/default/objects/Service_Contract_Lines__c/fields/Support_Product__c.field-meta.xml
<CustomField>
    <fullName>Support_Product__c</fullName>
    <formula>Product_Name_Nominal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Product</label>
    <type>Text</type>
</CustomField>